FIX: Footer alignement and image overflow on mobile

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -150,4 +150,8 @@
         gap: 0.75rem;
         align-items: center;
     }
+
+    .company-name {
+        justify-content: center;
+    }
 }
